--- a/bhagavadgita/src/component/chsty.css
+++ b/bhagavadgita/src/component/chsty.css
@@ -10,11 +10,17 @@ nav {
     transition: all 0.3s;
     /* border: 1px solid #f7e6d6c9; */
     width: auto;
-    font-size: 2vh;
+    font-size: 3vh;
     line-height: 1.2;
 }
 
 .pqr:hover {
     cursor: pointer;
     background-color: #f7e6d6c9;
+}
+
+@media screen and (max-width: 991px) {
+    .pqr {
+        font-size: 2.3vh;
+    }
 }
