--- a/bhagavadgita/src/component/style.css
+++ b/bhagavadgita/src/component/style.css
@@ -109,12 +109,15 @@ nav {
 
 .lodbg {
     background-color: white;
-    z-index: 9;
+    z-index: 8;
+    position:fixed;
+    display: flex;
 }
 
 .loading {
-    position: fixed;
-    z-index: 10;
+    height: auto;
+    /* background: linear-gradient(); */
+    z-index: 8;
     animation-name: loading;
     animation-timing-function: ease-in-out;
     animation-duration: 0.5s;
@@ -275,6 +278,10 @@ a {
     /*.text {
          display: none; 
     }*/
+
+    .loading {
+        transform: scale(0.4);
+    }
 
     .boxbar {
         /* display: block; */
