--- a/bhagavadgita/src/component/style.css
+++ b/bhagavadgita/src/component/style.css
@@ -215,7 +215,22 @@ a {
 .abc {
     cursor: pointer;
     transition: all 0.3s;
+    animation: fadeUp linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
 }
+
+@keyframes fadeUp {
+    from {
+        opacity:0;
+        transform: translateY(40px) scale(0.5);
+    }
+    to {
+        opacity:1;
+        transform: translateY(0) scale(1);
+    }
+}
+        
 
 .CS {
     font-family:cursive;
