--- a/bhagavadgita/src/component/style.css
+++ b/bhagavadgita/src/component/style.css
@@ -214,7 +214,7 @@ a {
 
 .abc {
     cursor: pointer;
-    transition: all 0.3s;
+    /* transition: all 0.3s; */
     animation: fadeUp linear;
     animation-timeline: view();
     animation-range: entry 0% cover 40%;
